Refs #31711; Updated docker-compose-dev to use pound:development and added BALANCER_PORT env to apache env samples

--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -32,7 +32,7 @@ instance2:
   - SOURCE_Products_Reportek=git https://github.com/eea/Products.Reportek branch=development
 
 pound:
-  image: eeacms/reportek-pound
+  image: eeacms/reportek-pound:development
   restart: always
   links:
   - instance1
