Refs #31711; Use development tag for cron in docker-compose-dev

--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -58,7 +58,7 @@ localconv:
   restart: always
 
 cron:
-  image: eeacms/reportek-cron
+  image: eeacms/reportek-cron:development
   restart: always
   env_file:
   - envs/cron-dev.env
