--- a/envs/cron-staging.env.sample
+++ b/envs/cron-staging.env.sample
@@ -1,1 +1,2 @@
-CRONTASK_1=*/2 * * * * curl -k -u <replaceme>:<replaceme> https://cdrtest.eionet.europa.eu/ReportekEngine/runAutomaticApplications?p_applications=AutomaticQA
+CRONTASK=curl -k -u <replaceme>:<replaceme> https://cdrtest.eionet.europa.eu/ReportekEngine/runAutomaticApplications?p_applications=AutomaticQA
+CRONTASK_INTERVAL=*/2 * * * *
