Refs #70714; Updated sample apache env files for dev and staging deployments

--- a/envs/apache-staging.env.sample
+++ b/envs/apache-staging.env.sample
@@ -13,7 +13,7 @@ CERT_PASS=
 APACHE_SSL_CERT_SRC=https://eeasvn.eea.europa.eu/repositories/certs/star.eionet.europa.eu.27022015.crt
 APACHE_SSL_KEY_SRC=https://eeasvn.eea.europa.eu/repositories/private/star.eionet.europa.eu.27022015.key
 APACHE_SSL_CHAIN_SRC=https://eeasvn.eea.europa.eu/repositories/certs/RapidSSL-SHA256-CA-G3.crt
-APACHE_WEBQ_HTTP=http://webqdev.eionet.europa.eu/$1?base_uri=http://cdrtest.eionet.europa.eu/webq/
+APACHE_WEBQ_HTTP=http://webq.eionet.europa.eu/$1?base_uri=http://cdrtest.eionet.europa.eu/webq/
 APACHE_WEBFORMS_HTTP=http://webq2test.eionet.europa.eu/$1?base_uri=http://cdrtest.eionet.europa.eu/webforms/
 APACHE_WEBQ_HTTPS=http://webq.eionet.europa.eu/$1?base_uri=https://cdrtest.eionet.europa.eu/webq/
 APACHE_WEBFORMS_HTTPS=http://webq2test.eionet.europa.eu/$1?base_uri=https://cdrtest.eionet.europa.eu/webforms/
