--- a/envs/apache-staging.env.sample
+++ b/envs/apache-staging.env.sample
@@ -3,8 +3,8 @@ APACHE_SERVER_NAME=cdrtest.eionet.europa.eu
 APACHE_HTTP_PROXY_TIMEOUT=1200
 APACHE_HTTPS_PROXY_TIMEOUT=120
 APACHE_DATA_HOSTNAME=cdrtest
-BALANCER_NAME=pound
-BALANCER_PORT=8080
+BALANCER_NAME=haproxy
+BALANCER_PORT=5000
 TPL_URL=https://svn.eionet.europa.eu/repositories/VhostsDataRepo/cdr/apache-vh-cdr.j2
 TPL_USER=replace_me
 TPL_PASS=replace_me
