--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -38,7 +38,7 @@ haproxy:
   - instance1
   - instance2
   environment:
-    COOKIES_ENABLED: true
+    COOKIES_ENABLED: "true"
     BACKENDS_PORT: 8080
 
 zeoserver:
